--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ application/logs/*
 
 composer.lock
 
+web1.0/*
+
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
